// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should render the component with a custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom title
</span>
`;

exports[`ProductTitle should render the component with the product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - without image
  </span>
</div>
`;
